# sftp_mounter

./: .gitignore  README.md  SFTPMounter.spec  gemini.md  pyproject.toml
sftp_mounter/: __init__.py  config_manager.py  gui.py  i18n.py  main.py  mounter.py  package.py  release_info.py
